# ZPlayer

./: README.md
ZPlayer/: build.gradle  gradle.properties
ZPlayer/app/: CMakeLists.txt  build.gradle
ZPlayer/app/src/androidTest/java/com/example/bangl/zplayer/: ExampleInstrumentedTest.java
ZPlayer/app/src/main/: AndroidManifest.xml
ZPlayer/app/src/main/cpp/: native-lib.cpp
ZPlayer/app/src/main/cpp/libavcodec/: avcodec.h
ZPlayer/app/src/main/cpp/libavutil/: ffversion.h
ZPlayer/app/src/main/java/com/example/bangl/zplayer/: MainActivity.java  ZPlayer.java
ZPlayer/app/src/main/res/layout/: activity_main.xml
ZPlayer/app/src/main/res/values/: strings.xml
ZPlayer/app/src/test/java/com/example/bangl/zplayer/: ExampleUnitTest.java
ZPlayer/gradle/wrapper/: gradle-wrapper.properties
